--- a/merchandise.html
+++ b/merchandise.html
@@ -5,7 +5,38 @@
     <title>Djibouti</title>
 </head>
 <body>
-<label for="name">Customer Name:</label>
-<input type="text" id="name">
+    <form action="">
+        <fieldset>
+            <legend>Personal Information</legend>
+            <label for="name">Customer Name:</label>
+            <input type="text" id="name">
+        </fieldset>
+        <fieldset>
+            <legend>Items Ordered</legend>
+            <label for="flag">Flag: 20£ x </label>
+            <input type="number" id="flag" min="0" max="3" value="0">
+            <hr>
+            <label for="mug">Mug: 30£ x </label>
+            <input type="number" id="mug" min="0" max="3" value="0">
+        </fieldset>
+        <fieldset>
+            <legend>Postage</legend>
+            <label for="postage">Postage: </label>
+            <select name="" id="postage">
+                <option value="1">One Day - 10£</option>
+                <option value="2">Normal Day - 5£</option>
+                <option value="3">Slow - Free</option>
+            </select>
+        </fieldset>
+        <fieldset disabled>
+            <legend>Summary</legend>
+            <label for="total">Total Cost: </label>
+            <input type="text" id="total">
+        </fieldset>
+        <fieldset>
+            <input type="button" value="Calculate Total Cost">
+            <input type="button" value="Clear">
+        </fieldset>
+    </form>
 </body>
 </html>
