Added links between pages

--- a/merchandise.html
+++ b/merchandise.html
@@ -5,6 +5,8 @@
     <title>Djibouti</title>
 </head>
 <body>
+    <a href="customer.php">Go To Customer Page</a>
+    <hr>
     <form action="">
         <fieldset>
             <legend>Personal Information</legend>
